k8s/api-gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api-gateway
  template:
    metadata:
      labels:
        component: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: 236032563814.dkr.ecr.us-east-2.amazonaws.com/trainingapp-client@sha256:cc87a649d0e05946412eb7b66c172692ffd810203a842d797af84a5f6332dfd9
          ports:
            - containerPort: 5000
