k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: "236032563814.dkr.ecr.us-east-2.amazonaws.com/trainingapp-client:client-v2"
          ports:
            - containerPort: 3000
