k8s/entries-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entries-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: entries
  template:
    metadata:
      labels:
        component: entries
    spec:
      containers:
        - name: entries
          image: "236032563814.dkr.ecr.us-east-2.amazonaws.com/trainingapp-client:entries-v2"
          ports:
            - containerPort: 50051
