k8s/moods-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moods-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: moods-api
  template:
    metadata:
      labels:
        component: moods-api
    spec:
      containers:
        - name: moods-api
          image: 236032563814.dkr.ecr.us-east-2.amazonaws.com/trainingapp-client:moods-api-v2
          ports:
            - containerPort: 5002
