k8s/moods-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moods-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: moods-service
  template:
    metadata:
      labels:
        component: moods-service
    spec:
      containers:
        - name: moods-service
          image: 236032563814.dkr.ecr.us-east-2.amazonaws.com/trainingapp-client:moods-service-v2
          ports:
            - containerPort: 50052
