k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: "236032563814.dkr.ecr.us-east-2.amazonaws.com/trainingapp-server:server-v1"
          ports:
            - containerPort: 5001
