k8s/stats-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: stats-service
  template:
    metadata:
      labels:
        component: stats-service
    spec:
      containers:
        - name: stats-service
          image: "236032563814.dkr.ecr.us-east-2.amazonaws.com/trainingapp-client:stats-service-v2"
          ports:
            - containerPort: 50053
