k8s/prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: prometheus
  ports:
    - port: 9090
      targetPort: 9090
