k8s/server-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "5001"
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5001
      targetPort: 5001
