k8s/stats-api-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: stats-api-cluster-ip-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "5003"
spec:
  type: ClusterIP
  selector:
    component: stats-api
  ports:
    - port: 5003
      targetPort: 5003
